# 6502-Emulator

./: .gitignore  6502_emu  CMakeLists.txt  ProcessorInfo.Md  Readme.md  main_6502  main_6502.cpp
include/: common.h  cpu.h  instructions.h  memory.h
src/: cpu.cpp  memory.cpp
src/cpu/: addressing.cpp  core.cpp  fetch.cpp  instructions.cpp  stack.cpp
src/memory/: memory.cpp
tests/: ADC_tests.cpp  cpu_tests.cpp  test_common.h
